[package]
name = "firewall_reentrancy_detect"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.0", features = [
    "full",
    "provider-debug-api",
    "reqwest",
    "rpc-types",
    "node-bindings",
] }
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
reqwest = "0.12.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.128" }
dotenv = "0.15.0"
anyhow = "1.0.90"
revm = { version = "16.0.0", features = ["alloydb"] }
